Store .zip in S3, use local codebase

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
@@ -333,8 +333,9 @@ var codebase = "<!--CODEBASE-->";
 	}
 
 	function isLocalhost(){
-		return location.protocol.match(/(chrome|app|file:)/) || location.host.match(/^([0-9.]*|(autotest|deploy).*geogebra.org|localhost)(:.+)?$/);
+		return location.protocol.match(/(chrome|app|file:)/) || location.host.match(/^([0-9.]*|(autotest|deploy).*geogebra.org|localhost|apps-builds.s3.*.amazonaws.com)(:.+)?$/);
 	}
+
 	function showStartScreen(){
 		var lang = getURLparam("lang") || getCookie("GeoGebraLangUI") || getLocalStorage("GeoGebraLangUI") || navigator.language || "en";
 		window.setTimeout(showInEnglish, 1000);
