Make sure invalid module name doesn't break applet startup, fix typo

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
@@ -16,7 +16,7 @@ if (!window.console.log) window.console.log = function () { };
 
 var latestVersion="5.0.502.0";
 var module = "web3d";
-var defaultParams = {"vendor":"<!--VENDOR-->"};
+var defaultParams = {"vendor":"<!--VENDOR-->", "preloadModules":""};
 var prerelease = false;
 var debug = false;
 var startDelay = 0;
