--- a/web/src/main/resources/org/geogebra/web/resources/war/applet.html
+++ b/web/src/main/resources/org/geogebra/web/resources/war/applet.html
@@ -17,7 +17,7 @@ label {
 <script type="text/javascript">
 
 	var params = {
-		"appName" : [ "select", "classic", "graphing", "geometry", "3d", "calculator", "whiteboard" ],
+		"appName" : [ "select", "classic", "graphing", "geometry", "3d", "calculator", "notes", "evaluator"],
 		"perspective" : "text",
 		"showToolBar" : "boolean",
 		"showMenuBar" : "boolean",
