APPS-1715: change AppId of Scientific Calculator to `scientific`

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-header-beta.html
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-header-beta.html
@@ -1,6 +1,6 @@
 <script>
 defaultParams.marginTop = window.appOnline ? 64 : 0;
-if (appID == "calculator") {
+if (appID == "scientific") {
 	defaultParams.marginTop = 112;
 }
 function getAppPicker() {
