--- a/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
@@ -100,7 +100,7 @@ var codebase = "<!--CODEBASE-->";
 		if (name && window.history && window.history.pushState && name != "picker" && location.host.indexOf("geogebra") >= 0 &&
 				location.href.indexOf("?") < 0 && !location.pathname.match(/\/.*\/.+/) && !isLocalhost()){
 			var unbundled = ["graphing", "geometry", "whiteboard", "notes", "3d", "cas",
-				"scientific", "calculator", "suite"].indexOf(name) >= 0;
+				"scientific", "scientific", "suite"].indexOf(name) >= 0;
 			if (name != "classic" && (location.pathname.indexOf("classic") > 0 || !unbundled)) {
 				name = "classic#" + name;
 			}
